
changes relative to sbcl-1.4.1:
  * enhancement: ASDF updated to 3.3.0.1. This ASDF release is dedicated to
    the late Elias Pipping who put enormous amounts of work into it despite
    his terminal illness. Thank you and rest in peace. (lp#1681201)
  * enhancement: alien routines compiled with '-fsanitize=thread' and/or
    '-fsanitize=memory' cause fewer false positives in error reporting.

changes in sbcl-1.4.1 relative to sbcl-1.4.0:
  * optimization: faster foreign callbacks.
  * enhancement: complex arrays can be stack allocated.
  * enhancement: PROCESS-KILL now exists on win32 and PROCESS-PID actually
    returns the PID.
  * optimization: the register allocation method used by the compiler when
    optimizing for speed is now faster for functions with large bodies.
  * bug fix: SB-INTROSPECT:ALLOCATION-INFORMATION works on big-endian CPUs
    (fixes lp#490490 for real rather than by disabling a test)
  * bug fix: code objects and bignums of large enough size to be placed
    on GC pages without any other object no longer cause accidental copying
    during garbage collection. (gencgc only)
  * bug fix: sb-fasteval failure with 0-argument lambdas (lp#1722715)
  * bug fix: RUN-PROGRAM doesn't leak handles on win32 and PROCESS-CLOSE
    doesn't crash. (lp#1724472)

changes in sbcl-1.4.0 relative to sbcl-1.3.21:
  * minor incompatible change: DESTRUCTURING-BIND treats non-toplevel () as
    nested empty pattern. This seems to be what the standard mandates, so
    conforming code should not be affected.
  * ehancement: (GC :GEN 7) with gencgc will zero-fill dead pseudo-static
    objects so that they do not spuriously cause reachability of objects that
    would have been otherwise dead.
  * enhancement: PROCESS-STATUS now tracks stopped and continued processes
    properly (also fixes lp#1624941, based on patch by Elias Pipping).
  * bug fix: INSPECT handles errors signaled while printing slot
    values. (lp#454682)